Just got internet, added Details to Events table and throuhgout pages

--- a/SDCEventTracker/Views/Home/EventDetails.cshtml
+++ b/SDCEventTracker/Views/Home/EventDetails.cshtml
@@ -3,73 +3,83 @@
 <h2>@ViewBag.Title</h2>
 <hr />
 <div class="container">
-    <div class="col-md-12 text-center" style="text-transform: capitalize;">
-        <h2>@Html.DisplayFor(model => model.EventName)</h2>
+    <div class="row">
+        <div class="col-md-12 text-center" style="text-transform: capitalize;">
+            <h2>@Html.DisplayFor(model => model.EventName)</h2>
+        </div>
     </div>
-    <div>
-        <dl class="dl-horizontal" id="details">
-            <dt>
-                @Html.DisplayNameFor(model => model.Date)
-            </dt>
+    <div class="row">
+        <div>
+            <dl class="dl-horizontal col-md-10" id="details">
+                <dt>
+                    @Html.DisplayNameFor(model => model.Details)
+                </dt>
+                <dd style="text-transform: none;">
+                    @Html.DisplayFor(model => model.Details)
+                </dd>
+                <dt>
+                    @Html.DisplayNameFor(model => model.Date)
+                </dt>
 
-            <dd>
-                @Html.DisplayFor(model => model.Date)
-            </dd>
-            <dt>
-                @Html.DisplayNameFor(model => model.City), @Html.DisplayNameFor(model => model.State)
-            </dt>
+                <dd>
+                    @Html.DisplayFor(model => model.Date)
+                </dd>
+                <dt>
+                    @Html.DisplayNameFor(model => model.City), @Html.DisplayNameFor(model => model.State)
+                </dt>
 
-            <dd>
-                @Html.DisplayFor(model => model.City), @Html.DisplayFor(model => model.State) - @Html.DisplayFor(model => model.Zip)
-            </dd>
+                <dd>
+                    @Html.DisplayFor(model => model.City), @Html.DisplayFor(model => model.State) - @Html.DisplayFor(model => model.Zip)
+                </dd>
 
-            <dt>
-                @Html.DisplayNameFor(model => model.Location)
-            </dt>
+                <dt>
+                    @Html.DisplayNameFor(model => model.Location)
+                </dt>
 
-            <dd>
-                @Html.DisplayFor(model => model.Location)
-            </dd>
-            <dt>
-                @Html.DisplayNameFor(model => model.MorningHunt)
-            </dt>
+                <dd>
+                    @Html.DisplayFor(model => model.Location)
+                </dd>
+                <dt>
+                    @Html.DisplayNameFor(model => model.MorningHunt)
+                </dt>
 
-            <dd>
-                @YesNo((bool)Model.MorningHunt)
-            </dd>
+                <dd>
+                    @YesNo((bool)Model.MorningHunt)
+                </dd>
 
-            <dt>
-                @Html.DisplayNameFor(model => model.EveningHunt)
-            </dt>
+                <dt>
+                    @Html.DisplayNameFor(model => model.EveningHunt)
+                </dt>
 
-            <dd>
-                @YesNo((bool)Model.EveningHunt)
-            </dd>
+                <dd>
+                    @YesNo((bool)Model.EveningHunt)
+                </dd>
 
-            <dt>
-                @Html.DisplayNameFor(model => model.BenchShow)
-            </dt>
+                <dt>
+                    @Html.DisplayNameFor(model => model.BenchShow)
+                </dt>
 
-            <dd>
-                @YesNo((bool)Model.BenchShow)
-            </dd>
+                <dd>
+                    @YesNo((bool)Model.BenchShow)
+                </dd>
 
-            <dt>
-                @Html.DisplayNameFor(model => model.BarkingContest)
-            </dt>
+                <dt>
+                    @Html.DisplayNameFor(model => model.BarkingContest)
+                </dt>
 
-            <dd>
-                @YesNo((bool)Model.BarkingContest)
-            </dd>
-
-        </dl>
+                <dd>
+                    @YesNo((bool)Model.BarkingContest)
+                </dd>
+            </dl>
+        </div>
     </div>
-
-    <div class="col-md-2 pull-right">
-        <button type="button" class="btn btn-default">@Html.ActionLink("Back to Competitions", "Competitions")<i class="fa fa-home"></i></button>
-    </div>
-    <div class="col-md-2 pull-right">
-        <button type="button" class="btn btn-success">@Html.ActionLink("Submit Results", "SubmitResults", "Home", new { id = Model.ID }, null)<i class="fa fa-home"></i></button>
+    <div class="row">
+        <div class="col-md-2 pull-right">
+            <button type="button" class="btn btn-default">@Html.ActionLink("Back to Competitions", "Competitions")<i class="fa fa-home"></i></button>
+        </div>
+        <div class="col-md-2 pull-right">
+            <button type="button" class="btn btn-success">@Html.ActionLink("Submit Results", "SubmitResults", "Home", new { id = Model.ID }, null)<i class="fa fa-plus-circle"></i></button>
+        </div>
     </div>
 </div>
 
