--- a/SDCEventTracker/Views/Home/EventResults.cshtml
+++ b/SDCEventTracker/Views/Home/EventResults.cshtml
@@ -151,5 +151,5 @@
     <button type="button" class="btn btn-default">@Html.ActionLink("Back to Competitions", "Competitions")<i class="fa fa-home"></i></button>
 </div>
 <div class="col-md-2 pull-right">
-    <button type="button" class="btn btn-success">@Html.ActionLink("Submit More Results", "SubmitResults", new { id = ViewBag.EventID })</button>
+    <button type="button" class="btn btn-success">@Html.ActionLink("Submit More Results", "SubmitResults", new { id = ViewBag.EventID })<i class="fa fa-plus-circle"></i></button>
 </div>
