--- a/SDCEventTracker/Views/Home/SubmitEvent.cshtml
+++ b/SDCEventTracker/Views/Home/SubmitEvent.cshtml
@@ -91,10 +91,17 @@
                 @Html.ValidationMessageFor(model => model.BarkingContest)
             </div>
         </div>
+        <div class="form-group">
+            @Html.LabelFor(model => model.Details, new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.TextAreaFor(model => model.Details, new { style = "width: 400px; height: 200px; border-radius: 5px;" })
+                @Html.ValidationMessageFor(model => model.Details)
+            </div>
+        </div>
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <button type="submit" class="btn btn-success" >Submit<i class="fa fa-edit"></i></button>
             </div>
         </div>
     </div>
