--- a/SDCEventTracker/Views/Home/SubmitResults.cshtml
+++ b/SDCEventTracker/Views/Home/SubmitResults.cshtml
@@ -53,8 +53,8 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Submit Place" class="btn btn-default" />
-            </div>
+                <button type="submit" class="btn btn-default" >Submit Place<i class="fa fa-plus-circle"></i></button>
+</div>
         </div>
     </div>
 }
@@ -63,6 +63,6 @@
     <button type="button" class="btn btn-default">@Html.ActionLink("Back to Competitions", "Competitions")<i class="fa fa-home"></i></button>
 </div>
 <div class="col-md-2 pull-right">
-    <button type="button" class="btn btn-success">@Html.ActionLink("View Results", "EventResults", new { id = ViewBag.EventID })<i class="fa fa-home"></i></button>
+    <button type="button" class="btn btn-success">@Html.ActionLink("View Results", "EventResults", new { id = ViewBag.EventID })<i class="fa fa-file-text-o"></i></button>
 </div>
     </div>
