--- a/SDCEventTracker/Views/Shared/_Layout.cshtml
+++ b/SDCEventTracker/Views/Shared/_Layout.cshtml
@@ -71,7 +71,7 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Competitions", "Competitions", "Home")</li>
-                    <li>@Html.ActionLink("Submit Upcoming Hunt", "SubmitEvent", "Home")</li>
+                    <li>@Html.ActionLink("Post Upcoming Hunt", "SubmitEvent", "Home")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
